# roq-schema

./: CHANGELOG.md  CMakeLists.txt  README.md
schema/flatbuffers/: BufferCapacity.fbs  CMakeLists.txt  Category.fbs  CreateOrder.fbs  DownloadEnd.fbs  Error.fbs  ExternalLatency.fbs  GatewayStatus.fbs  Interval.fbs  Layer.fbs  OrderUpdate.fbs  Portfolio.fbs  ReferenceData.fbs  RequestStatus.fbs  SecurityType.fbs  ServiceUpdate.fbs  State.fbs  StatisticsType.fbs  StatisticsUpdate.fbs  SupportType.fbs  TickSizeStep.fbs  TopOfBook.fbs  TradeSummary.fbs  TradingStatus.fbs  UpdateAction.fbs  api.fbs  api.fbs.j2
schema/proto/: CMakeLists.txt  action.proto  api.proto  api.proto.j2  bar.proto  buffer_capacity.proto  cancel_all_orders.proto  cancel_all_orders_ack.proto  cancel_order.proto  cancel_quotes.proto  cancel_quotes_ack.proto  category.proto  connection_status.proto  control.proto  create_order.proto  custom_matrix.proto  custom_matrix_update.proto  custom_metrics.proto  custom_metrics_update.proto  data_source.proto  download_begin.proto  download_end.proto  encoding.proto  error.proto  execution_instruction.proto  external_latency.proto  fill.proto  filter.proto  funds_update.proto  gateway_settings.proto  gateway_status.proto  generate_api.py  interval.proto  layer.proto  leg.proto  legs_update.proto  liquidity.proto  margin_mode.proto  market_by_order_update.proto  market_by_price_update.proto  (+61 more)
schema/roq/: Action.json  AddMarket.json  AddRoutes.json  Bar.json  BufferCapacity.json  CMakeLists.txt  CancelOrder.json  CancelQuotes.json  CancelQuotesAck.json  ConnectionStatus.json  Control.json  CreateOrder.json  CustomMatrix.json  CustomMetrics.json  CustomMetricsUpdate.json  Disconnected.json  DownloadEnd.json  Error.json  ExternalLatency.json  Fill.json  FundsUpdate.json  GatewaySettings.json  Layer.json  Leg.json  Liquidity.json  MBOUpdate.json  MBPUpdate.json  MarginMode.json  MarketByOrderUpdate.json  MarketStatus.json  MassQuote.json  MassQuoteAck.json  Measurement.json  MessageInfo.json  ModifyOrder.json  OrderAck.json  OrderCancelPolicy.json  OrderType.json  OrderUpdate.json  Parameter.json  (+42 more)
schema/roq/codec/fix/: BusinessMessageReject.json  CMakeLists.txt  ExecutionReport.json  InstrmtMDReq.json  MDFull.json  MDInc.json  MarketDataIncrementalRefresh.json  MarketDataRequestReject.json  MassQuote.json  MassQuoteAck.json  NewOrderSingle.json  OrderCancelReject.json  OrderMassCancelReport.json  OrderStatusRequest.json  Party.json  PositionAmountData.json  QuoteCancel.json  QuoteEntry.json  QuoteSet.json  QuoteStatusReport.json  RequestForPositionsAck.json  SecListGrp.json  SecurityDefinition.json  SecurityDefinitionRequest.json  SecurityList.json  TradeCaptureReport.json  TradeCaptureReportRequest.json  TradingSession.json  TradingSessionStatus.json  TrdCapRptSide.json  UserRequest.json
schema/roq/fix/: CMakeLists.txt  EncryptMethod.json  Field.json  MDEntryType.json  MDUpdateType.json  MassCancelRejectReason.json  MassCancelRequestType.json  MassCancelResponse.json  MiscFeeType.json  MsgType.json  OrdType.json  PartyRole.json  PosReqType.json  PosType.json  PutOrCall.json  QuoteCancelType.json  QuoteResponseLevel.json  QuoteType.json  SecurityTradingStatus.json  TimeInForce.json  TradeRequestType.json
schema/roq/fix/codec/: Heartbeat.json  InstrmtMDReq.json  MDInc.json  MDReq.json  MarketDataRequestReject.json  MassQuoteAck.json  NewOrderSingle.json  OrderCancelReplaceRequest.json  OrderMassStatusRequest.json  PositionAmountData.json  PositionReport.json  QuoteEntry.json  QuoteSet.json  QuoteStatusReport.json  Reject.json  RequestForPositions.json  SecListGrp.json  SecurityStatus.json  SecurityStatusRequest.json  SequenceReset.json  TradeCaptureReport.json  TradeCaptureReportRequest.json  TradeCaptureReportRequestAck.json  TradingSession.json  TradingSessionStatus.json  TradingSessionStatusRequest.json
src/roq/: Bar.json  BatchBegin.json  BatchEnd.json  CMakeLists.txt  CancelAllOrders.json  CancelAllOrdersAck.json  CancelOrder.json  Category.json  Connected.json  ConnectionStatus.json  Control.json  ControlAck.json  CreateOrder.json  CustomMatrix.json  CustomMatrixUpdate.json  DataSource.json  DownloadBegin.json  Encoding.json  Error.json  ExecutionInstruction.json  Fill.json  Filter.json  FundsUpdate.json  GatewaySettings.json  GatewayStatus.json  Interval.json  Layer.json  LegsUpdate.json  Liquidity.json  MBOUpdate.json  MBPUpdate.json  MarketByOrderUpdate.json  MarketByPriceUpdate.json  MassQuote.json  Measurement.json  ModifyOrder.json  OptionType.json  OrderAck.json  OrderManagement.json  OrderStatus.json  (+41 more)
src/roq/codec/fix/: CMakeLists.txt  ExecutionReport.json  Heartbeat.json  InstrmtMDReq.json  Logon.json  Logout.json  MDInc.json  MDReq.json  MarketDataRequest.json  MarketDataRequestReject.json  MarketDataSnapshotFullRefresh.json  OrderCancelReplaceRequest.json  OrderCancelRequest.json  OrderMassCancelRequest.json  OrderMassStatusRequest.json  PositionQty.json  PositionReport.json  Reject.json  RequestForPositions.json  ResendRequest.json  SecListGrp.json  SecurityListRequest.json  SecurityStatus.json  SecurityStatusRequest.json  SequenceReset.json  TestRequest.json  TradeCaptureReportRequestAck.json  TradingSessionStatusRequest.json  TrdCapRptSide.json  (+2 more)
src/roq/fix/: AccountType.json  BusinessRejectReason.json  CMakeLists.txt  CommType.json  CxlRejReason.json  CxlRejResponseTo.json  ExecTransType.json  ExecType.json  Field.json  FillLiquidityInd.json  HandlInst.json  Header.json  IOITransType.json  LastLiquidityInd.json  MDReqRejReason.json  MDUpdateAction.json  MassCancelResponse.json  MassStatusReqType.json  MsgType.json  OrdRejReason.json  OrdStatus.json  PartyIDSource.json  PosAmtType.json  PosReqResult.json  PosReqStatus.json  PosType.json  PositionEffect.json  QtyType.json  QuoteRejectReason.json  QuoteStatus.json  SecurityListRequestType.json  SecurityRequestResult.json  SecurityRequestType.json  SecurityResponseType.json  SecurityTradingStatus.json  SessionRejectReason.json  SettlPriceType.json  SettlType.json  Side.json  SubscriptionRequestType.json  (+9 more)
(+232 files in other folders)
