add_subdirectory(fix)
add_subdirectory(codec/fix)

set(TARGET_NAME ${PROJECT_NAME}-roq)

set(TARGET_DIR ${SCHEMA_DIR}/roq)

set(SOURCES
    Action.json
    AddRoutes.json
    Bar.json
    BatchBegin.json
    BatchEnd.json
    BufferCapacity.json
    CancelAllOrdersAck.json
    CancelAllOrders.json
    CancelOrder.json
    CancelQuotesAck.json
    CancelQuotes.json
    Category.json
    Connected.json
    ConnectionStatus.json
    Control.json
    CreateOrder.json
    CustomMatrix.json
    CustomMatrixUpdate.json
    CustomMetrics.json
    CustomMetricsUpdate.json
    Disconnected.json
    DownloadBegin.json
    DownloadEnd.json
    Encoding.json
    Error.json
    ExecutionInstruction.json
    ExternalLatency.json
    Fill.json
    Filter.json
    FundsUpdate.json
    GatewaySettings.json
    GatewayStatus.json
    Layer.json
    Liquidity.json
    MarginMode.json
    MarketByOrderUpdate.json
    MarketByPriceUpdate.json
    MarketStatus.json
    MassQuoteAck.json
    MassQuote.json
    MBOUpdate.json
    MBPUpdate.json
    Measurement.json
    MessageInfo.json
    ModifyOrder.json
    OptionType.json
    OrderAck.json
    OrderCancelPolicy.json
    OrderManagement.json
    OrderStatus.json
    OrderType.json
    OrderUpdate.json
    Origin.json
    Parameter.json
    ParametersUpdate.json
    Portfolio.json
    PortfolioUpdate.json
    PositionEffect.json
    Position.json
    PositionUpdate.json
    Precision.json
    Priority.json
    Protocol.json
    QualityOfService.json
    QuantityType.json
    Quote.json
    RateLimit.json
    RateLimitsUpdate.json
    RateLimitTrigger.json
    RateLimitType.json
    Ready.json
    ReferenceData.json
    RemoveRoutes.json
    RequestIdType.json
    RequestStatus.json
    RequestType.json
    RiskLimit.json
    RiskLimits.json
    RiskLimitsUpdate.json
    RouteAck.json
    Route.json
    RouteRequestStatus.json
    Routing.json
    SecurityType.json
    Side.json
    Start.json
    State.json
    Statistics.json
    StatisticsType.json
    StatisticsUpdate.json
    Stop.json
    StreamStatus.json
    SupportType.json
    TickSizeStep.json
    TimeInForce.json
    Timer.json
    TimeSeriesType.json
    TimeSeriesUpdate.json
    TopOfBook.json
    Trade.json
    TradeSummary.json
    TradeUpdate.json
    TradingStatus.json
    Transport.json
    UpdateAction.json
    UpdateReason.json
    UpdateType.json
    VariantType.json)

install(FILES ${SOURCES} DESTINATION ${TARGET_DIR})
